# mysqlpp

./: CMakeLists.txt  bootstrap  configure.ac
config/: mysql_loc.m4
examples/vstudio/: mysqlpp_gui_examples.sln
lib/: datetime.cpp
